--- a/Image_Changer/style.css
+++ b/Image_Changer/style.css
@@ -19,7 +19,7 @@
     border: 1px solid slateblue;
     margin: 0 auto;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     flex-wrap: wrap ;
 }
 
